--- a/css/ucb-page.css
+++ b/css/ucb-page.css
@@ -2,6 +2,6 @@
   Placeholder for styles for the basic page
  */
 
- .ucb-page-title {
-  padding-top: 10px;
+.ucb-page-title {
+  margin-top: 20px;
 }
