--- a/templates/layout/page--search.html.twig
+++ b/templates/layout/page--search.html.twig
@@ -55,7 +55,7 @@
       <div class="ucb-above-content-region container">
         {{ page.above_content }}
       </div>
-      <div class="ucb-search-page-content container">
+      <div class="ucb-content-wrapper ucb-search-page-content container">
 	    <h1>Search</h1>
         {{ page.content }}
       </div>
