--- a/templates/layout/page--user.html.twig
+++ b/templates/layout/page--user.html.twig
@@ -61,7 +61,7 @@
         {{ page.above_content }}
       </div>
       <div class="layout-content container user-profile-wrapper">
-        <div class="ucb-user-profile-container">
+        <div class="ucb-content-wrapper ucb-user-profile-container">
           {{ page.content }}
         </div>
         <div class="ucb-user-web-status-div">
