--- a/css/style.css
+++ b/css/style.css
@@ -24,11 +24,16 @@ body {
 }
 
 .ucb-breadcrumb-region {
-  padding: 10px 0;
+  padding: 10px 0 0 0;
+}
+
+.ucb-content-wrapper {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 main {
-  padding: 0 0 0 0;
+  padding: 0;
 }
 
 h1,
