CuBoulder/tiamat-theme#579 standardizes padding above h1 to 20px across content types; adds minor cleanup (2)

--- a/templates/layout/page--search.html.twig
+++ b/templates/layout/page--search.html.twig
@@ -48,7 +48,7 @@
 
 <div class="layout-container ucb-page-container">
   {{ block("page_header", "page.html.twig") }}
-  <div class="ucb-page-content{% if ucb_heading_font == 'normal' %} ucb-heading-font-normal{% endif %}">
+  <div{{ create_attribute({ class: ['ucb-page-content', ucb_heading_font == 'normal' ? 'ucb-heading-font-normal'] }) }}>
     {{ page.highlighted }}
     {{ page.help }}
     <main role="main">
