--- a/templates/layout/page--user.html.twig
+++ b/templates/layout/page--user.html.twig
@@ -60,7 +60,7 @@
         <div class="ucb-content-wrapper ucb-user-profile-container">
           {{ page.content }}
         </div>
-        <div class="ucb-user-web-status-div">
+        <div class="ucb-content-wrapper ucb-user-web-status-div">
           <h2>System Status</h2>
             <status-page-block page-id="9sm03v9xr9m6"></status-page-block>
           <div class="ucb-user-documentation">
