--- a/templates/navigation/menu--social-media-menu.html.twig
+++ b/templates/navigation/menu--social-media-menu.html.twig
@@ -61,7 +61,7 @@
 					</span>
 				</a>
 			{% elseif 'FACEBOOK' in formattedContent %}
-				<a href="{{ item.url }}" class="icon-a" title="FaceBook" alt="FaceBook">
+				<a href="{{ item.url }}" class="icon-a" title="Facebook" alt="Facebook">
 					<span class="icon-div">
 						<span class="sr-only">Facebook</span>
 						<span class="icon-bg icon-bg-facebook">
