--- a/templates/content/node--form-page.html.twig
+++ b/templates/content/node--form-page.html.twig
@@ -14,6 +14,11 @@
     <h1{{ title_attributes.addClass(is_front ? 'sr-only') }}>
       {{ label }}
     </h1>
+    {% if content.body|render %}
+    <div class="ucb-form-page-section ucb-form-page-body">
+      {{ content.body }}
+    </div>
+    {% endif %}
   </div>
   <div class="container mb-4">
     <div class="row">
